--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ scipy >= 1.2.1
 healpy >= 1.12.9
 PeakUtils >= 1.3.2
 tqdm >= 4.31.1
-madmom
+cython
+joblib
+hydra-core
 matplotlib
-ipykernel # dev
+# madmom        #! Install manually
+# =====================================
+# ipykernel     #> dev
