--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 numpy >= 1.16.1
 scipy >= 1.2.1
+pandas
 healpy >= 1.12.9
 PeakUtils >= 1.3.2
+matplotlib
 tqdm >= 4.31.1
+rich
 cython
 joblib
+omegaconf
 hydra-core
-matplotlib
-# madmom        #! Install manually
-# =====================================
-# ipykernel     #> dev
+# madmom==0.16.1        #! Install manually
